<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sound Logo Quiz</string>
    <string name="play_button">Play!</string>
     <string name="description"></string>
      <string name="playsound_button">Play Sound</string>
      <string name="hint_button">Show Hint</string>
      <string name="showanswer_button">Show Answer</string>
      <string name="check_button">Check</string>
      <string name="quit">Exit</string>
       <string name="really_quit">Are you sure you want to leave?</string>
       <string name="yes">Yes</string>
       <string name="no">No</string>
       <string name="ok">OK</string>
       <string name="congratulations">Congratulations!</string>
       <string name="finish">You Finished The Game</string>
        <string name="updates">Check Back For Updates</string>
        <string name="answeris">The Answer Is</string>
        <string name="correct">That\'s Correct!</string>
        <string name="next">Next</string>
        <string name="level">Level</string>
         <string name="reset_button">Reset</string>
     
</resources>
