<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/game">
    
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/congratulations"
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        /> 
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/finish"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        /> 
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/updates"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        /> 
         <Button 
            android:id="@+id/ok_button"
            android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/ok"
        android:textColor="#FFFFFF"
        android:text="@string/ok"
        android:textSize="25sp" />
         

         
</LinearLayout>
