<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#262626" >
    
   <LinearLayout
         android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/level"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        /> 
        <TextView
            android:id="@+id/level_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        /> 
      
         </LinearLayout>
        <View
    android:layout_width="fill_parent"
    android:layout_height="2dp"
    android:background="#FFFFFF"/>
         <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background"
         >
    
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/correct"
        android:typeface="serif"
        android:textSize="40sp"
        android:textColor="#000000"/> 
    
     
     <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:background="#000000"
         >
         
         <TextView
             android:id="@+id/correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
         android:typeface="serif"
         android:textColor="#FFFFFF"
         android:textSize="25sp" />
         </LinearLayout>
      
          <Button
              android:id="@+id/next_button"
               android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/next"
        android:text="@string/next"
        android:textSize="25sp"
        android:textColor="#000000"
        android:drawableRight="@drawable/next_button"
        android:drawableEnd="@drawable/next_button"/>
          
             
     <TextView
         android:id="@+id/new_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:typeface="serif"
        android:textSize="20sp"
        android:textColor="#000000"/> 

</LinearLayout>
</LinearLayout>
